--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
         <title>Materialize</title>
     </head>
     <body>
-        <h1>Materialize CSS</h1>
+        <div class="container">
+            <h1>Hey, ninjas!</h1>
+            <h2>Brothers</h2>
+            <h3>Sisters</h3>
+            <h4>Mothers</h4>
+            <h5>Fathers</h5>
+            <h6>Niggers</h6>
+            <p>This is the paragraph view</p>
+            <p class="flow-text">Flow text paragraph</p>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
