style.css added

--- a/index.html
+++ b/index.html
@@ -6,18 +6,27 @@
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="style.css">
         <title>Materialize</title>
     </head>
     <body>
         <div class="container">
-            <h1>Hey, ninjas!</h1>
-            <h2>Brothers</h2>
-            <h3>Sisters</h3>
-            <h4>Mothers</h4>
-            <h5>Fathers</h5>
-            <h6>Niggers</h6>
-            <p>This is the paragraph view</p>
-            <p class="flow-text">Flow text paragraph</p>
+            <h5 class="blue darken-1">Be yourself, everyone else is already taken</h5>
+            <h5 class="orange lighten-4">We are all in the gutter, but some of us are looking at stars</h5>
+            <h5 class="purple darken-2 white-text">To live is the rarest thing in the world. Most people exist, that is all</h5>
+            <h5 class="teal darken-2 yellow-text text-lighten-3">Experience is simply the name we give our mistakes</h5>
+            <h5 class="yellow lighten-3 purple-text text-darken-2">Always forgive your enemies - nothing annoys them so much</h5>
+        </div>
+        <div class="container">
+            <h5 class="center">Center alignment</h5>
+            <h5 class="">Left alignment</h5>
+            <h5 class="">Right alignment</h5>
+        </div>
+        <div class="container grey lighten-2 box">
+            <h5 class="">Vertical alignmnet</h5>
+        </div>
+        <div class="container">
+            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
