--- a/index.html
+++ b/index.html
@@ -10,24 +10,20 @@
         <title>Materialize</title>
     </head>
     <body>
+
         <div class="container">
-            <h5 class="blue darken-1">Be yourself, everyone else is already taken</h5>
-            <h5 class="orange lighten-4">We are all in the gutter, but some of us are looking at stars</h5>
-            <h5 class="purple darken-2 white-text">To live is the rarest thing in the world. Most people exist, that is all</h5>
-            <h5 class="teal darken-2 yellow-text text-lighten-3">Experience is simply the name we give our mistakes</h5>
-            <h5 class="yellow lighten-3 purple-text text-darken-2">Always forgive your enemies - nothing annoys them so much</h5>
+            <h4>Buttons</h4>
+            <a href="#" class="btn red darken-1 waves-effect waves-light">Normal Button</a>
+            <a href="#" class="btn-small light-blue darken-1 text-white waves-effect waves-light">Small Button</a>
+            <a href="#" class="btn-large">Large Button</a>
+            <a href="#" class="btn indigo">Indigo Button</a>
+            <a href="#" class="btn disabled">Disabled Button</a>
+            <h4>Floating Button</h4>
+            <a href="#" class="btn-floating pink pulse waves-effect waves-light"></a>
+            <h4>Other Elements</h4>
+            <div class="btn waves-effect waves-light">I am a div tag</div>
         </div>
-        <div class="container">
-            <h5 class="center">Center alignment</h5>
-            <h5 class="">Left alignment</h5>
-            <h5 class="">Right alignment</h5>
-        </div>
-        <div class="container grey lighten-2 box">
-            <h5 class="">Vertical alignmnet</h5>
-        </div>
-        <div class="container">
-            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
