--- a/index.html
+++ b/index.html
@@ -10,20 +10,14 @@
         <title>Materialize</title>
     </head>
     <body>
-
         <div class="container">
-            <h4>Buttons</h4>
-            <a href="#" class="btn red darken-1 waves-effect waves-light">Normal Button</a>
-            <a href="#" class="btn-small light-blue darken-1 text-white waves-effect waves-light">Small Button</a>
-            <a href="#" class="btn-large">Large Button</a>
-            <a href="#" class="btn indigo">Indigo Button</a>
-            <a href="#" class="btn disabled">Disabled Button</a>
-            <h4>Floating Button</h4>
-            <a href="#" class="btn-floating pink pulse waves-effect waves-light"></a>
-            <h4>Other Elements</h4>
-            <div class="btn waves-effect waves-light">I am a div tag</div>
+            <h4>Grid</h4>
+            <div class="row">
+                <div class="col">
+                    
+                </div>
+            </div>
         </div>
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
