--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
     </head>
     <body>
         <div class="container">
-            <h4>Grid</h4>
+            <h4>Grids</h4>
             <div class="row">
-                <div class="col">
-                    
-                </div>
+                <div class="col s3 ">content1</div>
+                <div class="col s3">content2</div>
+                <div class="col s3">content3</div>
+                <div class="col s3">content4</div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
