--- a/final_webpage/index.html
+++ b/final_webpage/index.html
@@ -7,9 +7,18 @@
         <!-- font awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <!-- material icons -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- materialize -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- stylesheet -->
+        <link rel="stylesheet" href="resources/css/style.css">
         <title></title>
     </head>
     <body>
 
+        <!-- materialize.js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- jquery.js -->
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     </body>
 </html>
