--- a/final_webpage/index.html
+++ b/final_webpage/index.html
@@ -24,9 +24,12 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="#">Photos</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#photo-container">Photos</a></li>
+                        <li><a href="#services-container">Services</a></li>
+                        <li><a href="#contact-container">Contact Us</a></li>
+                        <li><a href="#" class="tooltipped btn btn-floating pink accent-2 btn-small" data-tooltip="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#" class="tooltipped btn btn-floating indigo darken-2 btn-small" data-tooltip="Facebook"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#" class="tooltipped btn btn-floating blue darken-2 btn-small" data-tooltip="Twitter"><i class="fab fa-twitter"></i></a></li>
                     </ul>
                     <ul class="sidenav grey lighten-2" id="mobile-menu">
                         <li><a href="#">Photos</a></li>
@@ -37,7 +40,7 @@
             </nav>
         </header>
         <!-- photo/ grid -->
-        <section class="section container" id="photo-container">
+        <section class="section container scrollspy" id="photo-container">
             <div class="row">
                 <div class="col l4 s12">
                     <img class="responsive-img materialboxed" src="resources/img/portrait.jpg" alt="">
@@ -69,15 +72,117 @@
                 </div>
         </section>
         <!-- parallax -->
-
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="resources/img/street.jpg" class="responsive-img" alt="">
+            </div>
+        </div>
         <!-- services/ tab -->
-
+        <section class="services container scrollspy" id="services-container">
+            <div class="row">
+                <div class="col s12 l4">
+                    <h4 class="indigo-text darkent-4">What I Do!</h2>
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="col s12 l6 offset-l2">
+                    <ul class="tabs">
+                        <li class="tab">
+                            <a href="#photography" class="indigo-text">Photography</a>
+                        </li>
+                        <li class="tab">
+                            <a href="#editing" class="indigo-text">Editing</a>
+                        </li>
+                    </ul>
+                    <div class="col s12">
+                        <div class="" id="photography">
+                            <h6 class="indigo-text darken-4">PHOTOGRAPHY</h6>
+                            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div class="" id="editing">
+                            <h6 class="indigo-text darken-4">EDITTING</h6>
+                            <p class="">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- parallax -->
-
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="resources/img/stars.jpg" class="responsive-img" alt="">
+            </div>
+        </div>
         <!-- contact form -->
-
+        <section class="container padding-top-please scrollspy" id="contact-container">
+            <div class="row">
+                <div class="col s12 l5">
+                    <h4 class="indigo-text text-darken-4">Get In Touch</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="col s12 l5 offset-l2">
+                    <form class="" action="index.html" method="post">
+                        <div class="input-field">
+                            <i class="material-icons prefix teal-text">email</i>
+                            <input type="email" id="email">
+                            <label for="email">Your Email</label>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix teal-text">message</i>
+                            <textarea class="materialize-textarea" id="message"></textarea>
+                            <label for="message">Your Message</label>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix teal-text">today</i>
+                            <input type="text" id="date" class="datepicker">
+                            <label for="date">Choose a date that you need me for...</label>
+                        </div>
+                        <div class="input-field">
+                            <p>Services Required...</p>
+                            <p>
+                                <label>
+                                    <input type="checkbox">
+                                    <span>Photography</span>
+                                </label>
+                            </p>
+                            <p>
+                                <label>
+                                    <input type="checkbox">
+                                    <span>Editing</span>
+                                </label>
+                            </p>
+                        </div>
+                        <div class="input-field center">
+                            <button type="button" class="btn waves-effect waves-light">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
         <!-- footer -->
-
+        <footer class="page-footer grey darken-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 l6">
+                        <h6>About Me</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="col s12 l4 offset-l2">
+                        <h6>Connect</h6>
+                        <ul>
+                            <li><a href="#" class="grey-text text-lighten-3"><i class="fab fa-facebook"></i> Facebook</a></li>
+                            <li><a href="#" class="grey-text text-lighten-3"><i class="fab fa-twitter"></i> Twitter</a></li>
+                            <li><a href="#" class="grey-text text-lighten-3"><i class="fab fa-linkedin"></i> Linkedin</a></li>
+                            <li><a href="#" class="grey-text text-lighten-3"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright grey darken-4">
+                <div class="container center-align">
+                    &copy; 2021 Photo Craters
+                </div>
+            </div>
+        </footer>
         <!-- jquery.js -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <!-- materialize.js -->
@@ -87,6 +192,13 @@
             $(document).ready(function(){
                 $('.sidenav').sidenav();
                 $('.materialboxed').materialbox();
+                $('.parallax').parallax();
+                $('.tabs').tabs();
+                $('.datepicker').datepicker({
+                    disableWeekends: true
+                });
+                $('.tooltipped').tooltip();
+                $('.scrollspy').scrollSpy();
             });
         </script>
     </body>
